err/rapid.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rapid'...
Listing './lib/python3.5/site-packages/rapid/boilerplate'...
Listing './lib/python3.5/site-packages/rapid/boilerplate/c'...
Listing './lib/python3.5/site-packages/rapid/boilerplate/cpp'...
Listing './lib/python3.5/site-packages/rapid/boilerplate/csharp'...
Listing './lib/python3.5/site-packages/rapid/boilerplate/empty'...
Listing './lib/python3.5/site-packages/rapid/boilerplate/html'...
Listing './lib/python3.5/site-packages/rapid/boilerplate/java'...
Listing './lib/python3.5/site-packages/rapid/boilerplate/python'...
Compiling './lib/python3.5/site-packages/rapid/main.py'...
***   File "./lib/python3.5/site-packages/rapid/main.py", line 18
    print file.read()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rapid-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
